tests/samples/negative/types/enum_discriminant_duplicate_value.ax
module enum_discriminant_duplicate_value;

enum Choice: u8 {
  a = 0,
  b = 0,
}

fn main() -> i32 {
  return 0;
}
